horizontal scroll issue fix

--- a/styles/pages/Investors.module.scss
+++ b/styles/pages/Investors.module.scss
@@ -1,6 +1,5 @@
 .hero {
    @include hero-spacing;
-   @apply w-[100vw] overflow-hidden;
 
    .container {
       @apply max-w-[1000px];
